[package]
name = "cryptopals-rs"
version = "0.1.0"
authors = ["Curran McConnell <curran@mercury.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
aes = "^0.6"
block-modes = "^0.7"
rand = "^0.8"
